# test-hedgehog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
game_of_life/: CMakeLists.txt  game_of_life.cc  utils.cc  utils.h
game_of_life/data/: grid.h  grid_block.h
game_of_life/graph/: gol_graph.h
game_of_life/state/: update_grid_state.h
game_of_life/task/: split_grid_task.h  update_block_task.h
gauss/: CMakeLists.txt  gauss.cc  utils.cc  utils.h
gauss/data/: ids.h  matrix.h  matrix_line.h  matrix_line_block.h  vector.h
gauss/graph/: gauss_pivot_graph.h  gauss_solver_graph.h
gauss/state/: pivot_state.h  pivot_state_manager.h  solver_state.h  substract_lines_state.h  substract_lines_state_manager.h
gauss/task/: divide_line_task.h  split_matrix_task.h  sub_line_task.h
gauss_cuda/: CMakeLists.txt  utils.h
gauss_cuda/cuda/: CMakeLists.txt  cuda_gauss.cu  cuda_gauss.h
gauss_cuda/cuda_task/: cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_substract_lines_task.h
gauss_cuda/data/: cuda_matrix_line.h  matrix.h  matrix_line.h  substract_pair.h
gauss_cuda/graph/: gauss_graph.h  gauss_pivot_graph.h  gauss_solver_graph.h
gauss_cuda/state/: pivot_state.h  pivot_state_manager.h  solver_state_manager.h  substract_lines_state_manager.h
gauss_cuda/task/: divide_line_task.h  split_matrix_task.h
matrix-vector-product/: CMakeLists.txt  matrix-vector-product.cc
matrix-vector-product/data/: matrix_block_data.h  matrix_data.h  product_data.h  vector_block_data.h  vector_data.h
matrix_vector_product/: CMakeLists.txt  matrix_vector_product.cc
matrix_vector_product/data/: matrix_block_data.h  matrix_data.h  (+3 more)
matrix_vector_product_state/: CMakeLists.txt  matrix_vector_product_state.cc
scripts/: compile-dot.sh  parseResult.sh  test-gauss.sh
(+11 files in other folders)
